Correct accept / refuse buttons vertical alignement on firefox

--- a/app/client/admin/compass/sass/modules/_device-connection.scss
+++ b/app/client/admin/compass/sass/modules/_device-connection.scss
@@ -35,6 +35,7 @@
         position: relative;
         height: 28px;
         width: 43px;
+        vertical-align: top;
         @include refusedButton();
         @include cross(16px, 2px, white);
         margin-right: 5px;
